<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/string_fuzz_match_demo"
            android:textColor="#000000"
            android:textSize="15sp" />

    </RelativeLayout>

    <com.whieenz.searchselect.SearchView
        android:id="@+id/sv_input"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_line_white_background"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/NormalTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_key_name" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/NormalTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_line_white_background"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/NormalTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_key_sex" />

                <TextView
                    android:id="@+id/tv_sex"
                    style="@style/NormalTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bottom_line_white_background"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    style="@style/NormalTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/string_key_age" />

                <TextView
                    android:id="@+id/tv_age"
                    style="@style/NormalTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_search_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorThemeBackground" />

            <View
                android:id="@+id/v_search_list_empty"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#40000000" />
        </LinearLayout>

    </RelativeLayout>


</LinearLayout>